tests/expectations/compiler/core/algorithms/integers/keccak512/keccak512_hash_to_i128.out
<<<<<<< HEAD
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:23
     |
  28 |         let a: i128 = Keccak512::hash_to_i128(addr_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:23
     |
  29 |         let b: i128 = Keccak512::hash_to_i128(bool_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:23
     |
  30 |         let c: i128 = Keccak512::hash_to_i128(field_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:23
     |
  31 |         let d: i128 = Keccak512::hash_to_i128(group_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:23
     |
  32 |         let e: i128 = Keccak512::hash_to_i128(i8_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:23
     |
  33 |         let f: i128 = Keccak512::hash_to_i128(i16_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:23
     |
  34 |         let g: i128 = Keccak512::hash_to_i128(i32_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:23
     |
  35 |         let h: i128 = Keccak512::hash_to_i128(i64_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:23
     |
  36 |         let i: i128 = Keccak512::hash_to_i128(i128_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:37:23
     |
  37 |         let j: i128 = Keccak512::hash_to_i128(u8_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:23
     |
  38 |         let k: i128 = Keccak512::hash_to_i128(u16_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:39:23
     |
  39 |         let l: i128 = Keccak512::hash_to_i128(u32_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:40:23
     |
  40 |         let m: i128 = Keccak512::hash_to_i128(u64_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:41:23
     |
  41 |         let n: i128 = Keccak512::hash_to_i128(u128_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:42:23
     |
  42 |         let o: i128 = Keccak512::hash_to_i128(scalar_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:44:23
     |
  44 |         let q: i128 = Keccak512::hash_to_i128(Foo { a: 1u128, b: 1u128 });
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
=======
program test.aleo;

function main:
    input r0 as i8.private;
    input r1 as i16.private;
    input r2 as i32.private;
    input r3 as i64.private;
    input r4 as u8.private;
    input r5 as u16.private;
    input r6 as u32.private;
    input r7 as u64.private;
    hash.keccak512 aleo10qerras5799u6k7rjtc9y3hcwxuykr45qra7x7dp6jgnc0923czqm0lgta into r8 as i128;
    hash.keccak512 true into r9 as i128;
    hash.keccak512 1field into r10 as i128;
    hash.keccak512 1540945439182663264862696551825005342995406165131907382295858612069623286213group into r11 as i128;
    hash.keccak512 r0 into r12 as i128;
    hash.keccak512 r1 into r13 as i128;
    hash.keccak512 r2 into r14 as i128;
    hash.keccak512 r3 into r15 as i128;
    hash.keccak512 1i128 into r16 as i128;
    hash.keccak512 r4 into r17 as i128;
    hash.keccak512 r5 into r18 as i128;
    hash.keccak512 r6 into r19 as i128;
    hash.keccak512 r7 into r20 as i128;
    hash.keccak512 1u128 into r21 as i128;
    hash.keccak512 1scalar into r22 as i128;
    output r8 as i128.private;
    output r9 as i128.private;
    output r10 as i128.private;
    output r11 as i128.private;
    output r12 as i128.private;
    output r13 as i128.private;
    output r14 as i128.private;
    output r15 as i128.private;
    output r16 as i128.private;
    output r17 as i128.private;
    output r18 as i128.private;
    output r19 as i128.private;
    output r20 as i128.private;
    output r21 as i128.private;
    output r22 as i128.private;
    output -71083721889271449150938371145230573931i128 as i128.private;
>>>>>>> mainnet
